# YTTDFR

./: .gitmodules
.github/workflows/: Build-YttdFr.yml
patch-wizard/: .gitignore  CMakeLists.txt  main.cpp  patch.qrc  patchwizard.cpp  patchwizard.h
patch-wizard/pages/: intro.cpp  intro.h  license.cpp  license.h  path.cpp  path.h  progress.cpp  progress.h
www/: .gitignore  astro.config.mjs  package-lock.json  package.json
www/src/components/: Navbar.astro
www/src/components/vue/: SaveManager.vue  SaveUtils.ts
www/src/layouts/: Layout.astro
www/src/pages/: index.astro  sauvegardes.astro
www/src/styles/: _colors.scss
